reports/optimization/course/optimization_basics.err.log
Traceback (most recent call last):
  File "/installs/envs/positron/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/installs/envs/positron/lib/python3.9/site-packages/nbclient/client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/installs/envs/positron/lib/python3.9/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/installs/envs/positron/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/installs/envs/positron/lib/python3.9/site-packages/nbclient/client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "/installs/envs/positron/lib/python3.9/site-packages/nbclient/client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/installs/envs/positron/lib/python3.9/site-packages/nbclient/client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from scipy import optimize

def f(X):
  """
  Cost function.
  """  
  return (X**2).sum()

X0 = [1.,1.] # Initial guess
sol = optimize.minimize(f, X0, method = "nelder-mead")
X = sol.x
print "Solution: ", X

------------------

[0;36m  Cell [0;32mIn[2], line 12[0;36m[0m
[0;31m    print "Solution: ", X[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print("Solution: ", X)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Solution: ", X)? (1696389007.py, line 12)

